# IA_P1_Fork

./: .env.example  .gitignore  AI_WORKFLOW.md  AUDIT_REPORT.md  DEBT_REPORT.MD  DEBT_REPORT.md  FEEDBACK_BACKEND_ALEXIS.MD  FEEDBACK_ESTEBAN_RODRIGUEZ.md  FEEDBACK_TRACKER.md  Feedback_German_QA.MD  GEMINI.md  ORCHESTRATION_GUIDE.md  PROMPT_LOG.md  README.md  SECURITY_AUDIT.md  TESTING_SUMMARY.md  agent.md  docker-compose.yml
.agentic-flow/: README.md  af  pyproject.toml
.agentic-flow/agents/: backend-dev.agent.md  database.agent.md  doc.agent.md  frontend-dev.agent.md  linter.agent.md  orchestrator.agent.md  qa.agent.md  spec-generator.agent.md  test-backend.agent.md  test-frontend.agent.md
.agentic-flow/config/: agents.yaml  budget.yaml  routing.yaml
.agentic-flow/core/: __init__.py  cache.py  cli.py  detect_local.py  llm.py  lockfile.py  logger.py  memory.py  orchestrator.py  prometheus.py  resources.py  router.py  schema.py  tokens.py  validators.py  warmup.py
.agentic-flow/memory/: architecture.md  conventions.md  domain.md  index.json  index.sqlite  project-context.md
.agentic-flow/rules/: backend.yaml  frontend.yaml  specs.yaml  tests.yaml
.agentic-flow/runtime/: local-models.json  metrics.jsonl  system-profile.json
.agentic-flow/runtime/cache/: responses.sqlite
.agentic-flow/skills/: README.md
.agentic-flow/specs/: conversiones.spec.md
.agentic-flow/tests/: test_core.py  test_hardening.py  test_schema_logger.py  test_tokens_prometheus.py
.github/: copilot-instructions.md  pr-body-25.md  pull_request_template.md  test-coverage-plan.md
(+704 files in other folders)
